--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,11 @@ dependencies:
   geolocator:
   location:
   syncfusion_flutter_maps:
+  flutter_local_notifications:
+  firebase_messaging:
+  intl:
+  uuid:
+  cached_network_image:
 
 
   # The following adds the Cupertino Icons font to your application.
